--- a/dev-ruby/gruff/ChangeLog
+++ b/dev-ruby/gruff/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/gruff
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gruff/ChangeLog,v 1.36 2011/01/10 17:58:53 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/gruff/ChangeLog,v 1.37 2011/02/13 09:35:15 graaff Exp $
+
+  13 Feb 2011; Hans de Graaff <graaff@gentoo.org> gruff-0.3.6-r1.ebuild:
+  Ensure that imagemagick is built with proper options for tests, fixes bug
+  354577.
 
   10 Jan 2011; Hans de Graaff <graaff@gentoo.org> gruff-0.3.6-r1.ebuild:
   Keyword ~x86-macos.
