--- a/dev-python/south/ChangeLog
+++ b/dev-python/south/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/south
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/south/ChangeLog,v 1.2 2011/01/31 12:14:01 djc Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/south/ChangeLog,v 1.3 2011/02/13 10:49:08 betelgeuse Exp $
+
+  13 Feb 2011; Petteri Räty <betelgeuse@gentoo.org> south-0.7.2.ebuild,
+  south-0.7.3.ebuild:
+  Keyword for ~x86.
 
 *south-0.7.3 (31 Jan 2011)
 
