--- a/media-plugins/gst-plugins-cdio/ChangeLog
+++ b/media-plugins/gst-plugins-cdio/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-cdio
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdio/ChangeLog,v 1.41 2011/02/05 16:34:18 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-cdio/ChangeLog,v 1.42 2011/02/13 12:43:12 armin76 Exp $
+
+  13 Feb 2011; Raúl Porcel <armin76@gentoo.org>
+  gst-plugins-cdio-0.10.16.ebuild:
+  alpha stable wrt #353264
 
   05 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gst-plugins-cdio-0.10.16.ebuild:
