--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/base/ChangeLog,v 1.201 2011/02/05 19:36:17 blueness Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/base/ChangeLog,v 1.202 2011/02/13 12:51:10 armin76 Exp $
+
+  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> package.use.mask:
+  P.use.mask media-video/mplayer bluray again until devs know how to use
+  repoman...
 
   05 Feb 2011; Anthony G. Basile <blueness@gentoo.org> package.mask:
   Masked new selinux policies.
