--- a/media-video/gaupol/ChangeLog
+++ b/media-video/gaupol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/gaupol
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/gaupol/ChangeLog,v 1.15 2011/02/13 10:51:20 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/gaupol/ChangeLog,v 1.16 2011/02/13 13:27:19 arfrever Exp $
+
+  13 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -gaupol-0.17.ebuild:
+  Delete.
 
   13 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gaupol-0.17.1.ebuild:
   Stable on amd64 wrt bug #354673
