--- a/dev-perl/Mail-IMAPClient/ChangeLog
+++ b/dev-perl/Mail-IMAPClient/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Mail-IMAPClient
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.54 2011/02/10 23:34:26 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.55 2011/02/13 17:13:48 tomka Exp $
+
+  13 Feb 2011; Thomas Kahle <tomka@gentoo.org> Mail-IMAPClient-3.25.ebuild:
+  x86 stable per bug 351787
 
   10 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   Mail-IMAPClient-3.25.ebuild:
