--- a/app-arch/lzop/ChangeLog
+++ b/app-arch/lzop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/lzop
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/lzop/ChangeLog,v 1.31 2011/02/11 13:10:12 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/lzop/ChangeLog,v 1.32 2011/02/13 18:28:30 armin76 Exp $
+
+  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> lzop-1.03.ebuild:
+  ia64/sparc stable wrt #353842
 
   11 Feb 2011; Markos Chandras <hwoarang@gentoo.org> lzop-1.03.ebuild:
   Stable on amd64 wrt bug #353842
