--- a/kde-misc/kanyremote/ChangeLog
+++ b/kde-misc/kanyremote/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/kanyremote
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.17 2011/01/24 14:49:00 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/kanyremote/ChangeLog,v 1.18 2011/02/13 20:04:41 scarabeus Exp $
+
+  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kanyremote-5.11.ebuild:
+  old
 
   24 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   kanyremote-5.11.9.ebuild:
