--- a/x11-misc/makedepend/ChangeLog
+++ b/x11-misc/makedepend/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/makedepend
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.55 2011/02/14 14:42:39 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.56 2011/02/14 15:52:21 scarabeus Exp $
+
+  14 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -makedepend-1.0.2.ebuild:
+  old
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
   makedepend-1.0.3.ebuild:
