--- a/xfce-base/libxfce4util/ChangeLog
+++ b/xfce-base/libxfce4util/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/libxfce4util
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.158 2011/02/05 18:11:18 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfce4util/ChangeLog,v 1.159 2011/02/14 19:09:21 ssuominen Exp $
+
+  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  libxfce4util-4.8.1.ebuild:
+  alpha/ia64/sh/sparc stable wrt #349053
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> libxfce4util-4.8.1.ebuild:
   arm stable, bug #349053
