--- a/xfce-base/xfce4-panel/ChangeLog
+++ b/xfce-base/xfce4-panel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-panel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.182 2011/02/05 18:19:52 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.183 2011/02/14 19:22:28 ssuominen Exp $
+
+  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> xfce4-panel-4.8.0.ebuild:
+  alpha/ia64/sparc stable wrt #349053
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> xfce4-panel-4.8.0.ebuild:
   arm stable, bug #349053
