--- a/xfce-base/xfce4-session/ChangeLog
+++ b/xfce-base/xfce4-session/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.132 2011/02/05 18:43:58 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.133 2011/02/14 19:27:47 ssuominen Exp $
+
+  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-session-4.8.0.ebuild:
+  alpha/ia64/sparc stable wrt #349053
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> xfce4-session-4.8.0.ebuild:
   arm stable, bug #349053
