--- a/xfce-base/xfce-utils/ChangeLog
+++ b/xfce-base/xfce-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce-utils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce-utils/Attic/ChangeLog,v 1.175 2011/02/05 18:42:20 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce-utils/Attic/ChangeLog,v 1.176 2011/02/14 19:33:15 ssuominen Exp $
+
+  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> xfce-utils-4.8.0.ebuild:
+  alpha/ia64/sparc stable wrt #349053
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> xfce-utils-4.8.0.ebuild:
   arm stable, bug #349053
