--- a/xfce-extra/xfce4-appfinder/ChangeLog
+++ b/xfce-extra/xfce4-appfinder/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-appfinder
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-appfinder/Attic/ChangeLog,v 1.103 2011/02/05 18:56:11 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/xfce4-appfinder/Attic/ChangeLog,v 1.104 2011/02/14 19:46:21 ssuominen Exp $
+
+  14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  xfce4-appfinder-4.8.0.ebuild:
+  alpha/ia64/sparc stable wrt #349053
 
   05 Feb 2011; Markus Meier <maekke@gentoo.org> xfce4-appfinder-4.8.0.ebuild:
   arm stable, bug #349053
