--- a/dev-ruby/rye/ChangeLog
+++ b/dev-ruby/rye/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rye
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rye/ChangeLog,v 1.15 2011/01/29 19:50:09 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/rye/ChangeLog,v 1.16 2011/02/15 06:46:57 graaff Exp $
+
+*rye-0.9.4 (15 Feb 2011)
+
+  15 Feb 2011; Hans de Graaff <graaff@gentoo.org> +rye-0.9.4.ebuild:
+  Version bump.
 
 *rye-0.9.3 (29 Jan 2011)
 
