--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.93 2011/02/14 13:18:31 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.94 2011/02/15 13:04:03 flameeyes Exp $
+
+*libvirt-0.8.8_rc3 (15 Feb 2011)
+
+  15 Feb 2011; Diego E. Pettenò <flameeyes@gentoo.org>
+  -libvirt-0.8.8_rc2.ebuild, +libvirt-0.8.8_rc3.ebuild:
+  Bump to rc3.
 
 *libvirt-0.8.8_rc2 (14 Feb 2011)
 
