--- a/dev-libs/libffi/ChangeLog
+++ b/dev-libs/libffi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libffi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.111 2011/02/12 16:18:45 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libffi/ChangeLog,v 1.112 2011/02/15 17:51:42 ssuominen Exp $
+
+*libffi-3.0.10_rc5 (15 Feb 2011)
+
+  15 Feb 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +libffi-3.0.10_rc5.ebuild:
+  Version bump.
 
 *libffi-3.0.10_rc4 (12 Feb 2011)
 
