--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.5050 2011/02/15 15:42:36 vadimk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.5051 2011/02/15 18:13:42 ssuominen Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  15 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> package.mask:
+  Lastrite app-office/qbankmanager and xfce-extra/xfce4-xkb-plugin.
 
   15 Feb 2011; Vadim Kuznetsov <vadimk@gentoo.org> package.mask:
   Last rites for vmware-{server,player,modules}-1
