--- a/xfce-extra/tumbler/ChangeLog
+++ b/xfce-extra/tumbler/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/tumbler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/tumbler/ChangeLog,v 1.12 2011/02/14 19:47:17 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-extra/cvs-repo/gentoo-x86/xfce-extra/tumbler/ChangeLog,v 1.13 2011/02/15 19:53:16 ssuominen Exp $
+
+*tumbler-0.1.21 (15 Feb 2011)
+
+  15 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> +tumbler-0.1.21.ebuild:
+  Version bump.
 
   14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> tumbler-0.1.6.ebuild:
   alpha/ia64/sparc stable wrt #349053
