--- a/www-client/uzbl/ChangeLog
+++ b/www-client/uzbl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/uzbl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/uzbl/ChangeLog,v 1.36 2011/02/15 21:20:19 wired Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/uzbl/ChangeLog,v 1.37 2011/02/15 21:29:09 wired Exp $
+
+  15 Feb 2011; Alex Alexander <wired@gentoo.org> uzbl-2011.02.15.ebuild,
+  uzbl-9999.ebuild:
+  added warning, removed unnecessary quotes
 
 *uzbl-2011.02.15 (15 Feb 2011)
 
