--- a/media-libs/sdl-ttf/ChangeLog
+++ b/media-libs/sdl-ttf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/sdl-ttf
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-ttf/ChangeLog,v 1.50 2011/01/13 16:27:49 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-ttf/ChangeLog,v 1.51 2011/02/16 09:35:43 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> sdl-ttf-2.0.10.ebuild:
+  Stable on amd64 wrt bug #354937
 
 *sdl-ttf-2.0.10 (13 Jan 2011)
 
