--- a/games-puzzle/xye/ChangeLog
+++ b/games-puzzle/xye/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/xye
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/xye/ChangeLog,v 1.18 2011/01/15 08:00:19 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/xye/ChangeLog,v 1.19 2011/02/16 09:36:37 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xye-0.9.3.ebuild:
+  Stable on amd64 wrt bug #355103
 
 *xye-0.9.3 (15 Jan 2011)
 
