--- a/app-text/texlive-core/ChangeLog
+++ b/app-text/texlive-core/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.129 2011/02/16 13:06:39 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.130 2011/02/16 13:28:30 aballier Exp $
+
+  16 Feb 2011; Alexis Ballier <aballier@gentoo.org> texlive-core-2010.ebuild:
+  use etexmf-update
 
   16 Feb 2011; Alexis Ballier <aballier@gentoo.org> texlive-core-2010.ebuild:
   Import a fix from upstream to fix build with libpng 1.5, bug #355105
