--- a/xfce-base/xfce4-panel/ChangeLog
+++ b/xfce-base/xfce4-panel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-panel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.183 2011/02/14 19:22:28 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.184 2011/02/16 16:41:30 darkside Exp $
+
+  16 Feb 2011; Jeremy Olexa <darkside@gentoo.org> xfce4-panel-4.8.1.ebuild:
+  remove useless configure option for EAPI4
 
   14 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> xfce4-panel-4.8.0.ebuild:
   alpha/ia64/sparc stable wrt #349053
