--- a/net-misc/clamz/ChangeLog
+++ b/net-misc/clamz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/clamz
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/clamz/ChangeLog,v 1.2 2011/02/10 23:45:54 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/clamz/ChangeLog,v 1.3 2011/02/16 18:55:24 tomka Exp $
+
+  16 Feb 2011; Thomas Kahle <tomka@gentoo.org> clamz-0.4.ebuild:
+  x86 stable per bug 353125
 
   10 Feb 2011; Markos Chandras <hwoarang@gentoo.org> clamz-0.4.ebuild:
   Stable on amd64 wrt bug #353125
