--- a/dev-java/icedtea6-bin/ChangeLog
+++ b/dev-java/icedtea6-bin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/icedtea6-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/icedtea6-bin/Attic/ChangeLog,v 1.52 2011/02/16 17:40:28 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/icedtea6-bin/Attic/ChangeLog,v 1.53 2011/02/16 21:17:57 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> icedtea6-bin-1.9.7.ebuild:
+  Stable on amd64 wrt bug #355127
 
 *icedtea6-bin-1.9.7 (16 Feb 2011)
 
