--- a/dev-java/sun-jre-bin/ChangeLog
+++ b/dev-java/sun-jre-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jre-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.189 2011/02/16 12:58:16 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.190 2011/02/16 21:36:20 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  sun-jre-bin-1.6.0.24.ebuild:
+  Stable on amd64 wrt bug #354213
 
 *sun-jre-bin-1.6.0.24 (16 Feb 2011)
 
