--- a/app-emulation/emul-linux-x86-java/ChangeLog
+++ b/app-emulation/emul-linux-x86-java/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/emul-linux-x86-java
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-java/ChangeLog,v 1.98 2011/02/16 13:07:40 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/emul-linux-x86-java/ChangeLog,v 1.99 2011/02/16 21:44:46 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  emul-linux-x86-java-1.6.0.24.ebuild:
+  Stable on amd64 wrt bug #354213
 
 *emul-linux-x86-java-1.6.0.24 (16 Feb 2011)
 
