--- a/media-sound/drumstick/ChangeLog
+++ b/media-sound/drumstick/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/drumstick
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/drumstick/ChangeLog,v 1.9 2011/02/15 06:57:00 phajdan.jr Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/drumstick/ChangeLog,v 1.10 2011/02/16 22:26:40 hwoarang Exp $
+
+  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> drumstick-0.5.0.ebuild:
+  Stable on amd64 wrt bug #353476
 
   15 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   drumstick-0.5.0.ebuild:
