--- a/media-plugins/gmpc-magnatune/ChangeLog
+++ b/media-plugins/gmpc-magnatune/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gmpc-magnatune
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-magnatune/ChangeLog,v 1.31 2011/02/16 19:24:18 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gmpc-magnatune/ChangeLog,v 1.32 2011/02/17 13:55:35 hwoarang Exp $
+
+  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  gmpc-magnatune-0.20.0.ebuild:
+  Stable on amd64 wrt bug #325621
 
   16 Feb 2011; <angelos@gentoo.org> gmpc-magnatune-0.18.0.ebuild,
   gmpc-magnatune-0.20.0.ebuild:
