--- a/app-text/texlive-core/ChangeLog
+++ b/app-text/texlive-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/texlive-core
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.130 2011/02/16 13:28:30 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/texlive-core/ChangeLog,v 1.131 2011/02/17 15:06:37 aballier Exp $
+
+  17 Feb 2011; Alexis Ballier <aballier@gentoo.org> texlive-core-2010.ebuild:
+  Add a patch from debian to fix a2ping invocation wrt its shebang, part of bug
+  #289818
 
   16 Feb 2011; Alexis Ballier <aballier@gentoo.org> texlive-core-2010.ebuild:
   use etexmf-update
