--- a/app-admin/system-config-printer-gnome/ChangeLog
+++ b/app-admin/system-config-printer-gnome/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-admin/system-config-printer-gnome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.21 2011/02/16 20:01:09 reavertm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.22 2011/02/17 20:39:03 reavertm Exp $
+
+*system-config-printer-gnome-1.3.1 (17 Feb 2011)
+
+  17 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
+  -system-config-printer-gnome-1.3.0.ebuild,
+  +system-config-printer-gnome-1.3.1.ebuild:
+  Version bump, remove old
 
 *system-config-printer-gnome-1.3.0 (16 Feb 2011)
 
