--- a/app-crypt/WiRouterKeyRec/ChangeLog
+++ b/app-crypt/WiRouterKeyRec/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/WiRouterKeyRec
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.1 2011/01/19 12:48:57 c1pher Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.2 2011/02/17 21:10:58 hwoarang Exp $
+
+  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
+  WiRouterKeyRec-1.0.3.ebuild:
+  Stable on amd64 wrt bug #355197
 
 *WiRouterKeyRec-1.0.3 (19 Jan 2011)
 
