--- a/net-firewall/shorewall/ChangeLog
+++ b/net-firewall/shorewall/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/shorewall
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.177 2011/02/12 16:34:19 constanze Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.178 2011/02/17 22:49:10 tomka Exp $
+
+  17 Feb 2011; Thomas Kahle <tomka@gentoo.org> shorewall-4.4.15.1.ebuild:
+  x86 stable per bug 352532
 
 *shorewall-4.4.17 (12 Feb 2011)
 
