--- a/dev-perl/MIME-tools/ChangeLog
+++ b/dev-perl/MIME-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/MIME-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/MIME-tools/ChangeLog,v 1.67 2011/02/18 06:25:37 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/MIME-tools/ChangeLog,v 1.68 2011/02/18 07:19:25 tove Exp $
+
+  18 Feb 2011; Torsten Veller <tove@gentoo.org> -MIME-tools-5.500.ebuild:
+  Remove broken version (#353582)
 
 *MIME-tools-5.501 (18 Feb 2011)
 
