--- a/mail-client/trojita/ChangeLog
+++ b/mail-client/trojita/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/trojita
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/ChangeLog,v 1.9 2011/01/11 22:13:36 scarabeus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/trojita/ChangeLog,v 1.10 2011/02/18 11:53:22 scarabeus Exp $
+
+*trojita-0.2.9.3 (18 Feb 2011)
+
+  18 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -trojita-0.2.9.ebuild,
+  +trojita-0.2.9.3.ebuild:
+  Version bump to latest. Remove older. Per jkt's request.
 
   11 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> trojita-0.2.9.ebuild,
   trojita-9999.ebuild:
