--- a/media-sound/quimup/ChangeLog
+++ b/media-sound/quimup/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/quimup
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/quimup/ChangeLog,v 1.2 2010/06/27 12:25:26 angelos Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/quimup/ChangeLog,v 1.3 2011/02/18 14:00:44 angelos Exp $
+
+*quimup-1.2.0 (18 Feb 2011)
+
+  18 Feb 2011; <angelos@gentoo.org> +quimup-1.2.0.ebuild:
+  Version bump
 
 *quimup-1.1.1 (27 Jun 2010)
 
